@@ -1,11 +1,11 @@
 package ru.yandex.practicum.filmorate.service;
 
 import lombok.RequiredArgsConstructor;
+import org.junit.platform.commons.util.StringUtils;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Director;
-import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.storage.director.DirectorStorage;
 
 import java.util.List;
@@ -15,35 +15,30 @@ import java.util.List;
 public class DirectorService {
     private final DirectorStorage directorStorage;
 
-    public Director createDirector(Director director) {
-        if (director.getName().isBlank()) {
-            throw new ValidationException("Имя режиссера не дожно быть пустым");
+    public Director addDirector(Director director) {
+        if (StringUtils.isBlank(director.getName())) {
+            throw new ValidationException("Имя режиссера не должно быть пустым");
         }
-        return directorStorage.createDirector(director);
+        return directorStorage.add(director);
     }
 
     public Director updateDirector(Director director) {
-        return directorStorage.updateDirector(director);
+        return directorStorage.update(director);
     }
 
     public void deleteDirector(int id) {
-        directorStorage.deleteDirector(id);
+        directorStorage.delete(id);
     }
 
-    public Director getDirectorById(int id) {
-        Director director = directorStorage.getDirectorById(id);
+    public Director getDirector(int id) {
+        Director director = directorStorage.get(id);
         if (director == null) {
             throw new NotFoundException(String.format("Режиссер с id %s не найден", id));
         }
         return director;
     }
 
-    public List<Director> getListAllDirectors() {
-        return directorStorage.getListAllDirectors();
+    public List<Director> getAllDirectors() {
+        return directorStorage.getAll();
     }
-
-    public void load(List<Film> film) {
-        directorStorage.load(film);
-    }
-
 }
